--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "bs-stepper": "^1.7.0",
     "cdbreact": "^1.5.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
